--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ html {
     left: 0;
     right: 0;
     z-index: 1;
+    overflow: hidden;
 }
 
 /* navigation */
@@ -89,6 +90,7 @@ html {
     line-height: 38px ;
 }
 
+#mobile-menu-btn,
 #header .search-btn {
     float: right;
     color: #fff;
@@ -96,9 +98,23 @@ html {
     font-size: 20px;
     padding: 0 21px;
 }
+
+#header #mobile-menu-btn:hover {
+    background-color: #ccc;
+}
+#header #mobile-menu-btn:hover .menu-icon {
+    color: #000;
+    background-color: #ccc;
+}
 #header .search-btn:hover {
     background-color: #f44336;
     cursor: pointer;
+}
+#header .menu-icon,
+#header .search-icon {
+    color: #fff;
+    font-size: 20px;
+    line-height: 46px;
 }
 
 /* slider */
