--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ html {
 #slider {
     margin-top: 46px;
     padding-top: 50%;   
-    background: url('/assets/img/chicago.jpg') top center / cover no-repeat;
+    background: url('../img/chicago.jpg') top center / cover no-repeat;
     position: relative;
 }
 #slider .text-content {
